# agenticaiajit

./: .gitignore  README.md  docker-compose.yml  gemini.py  geminiOpenaiClient.py  main.py  pyproject.toml  requirements.txt
