[project]
name = "agenticaiajit"
version = "0.1.0"
description = "A Python project for experimenting with GenAI models including OpenAI GPT and Google Gemini, with Qdrant vector database integration."
requires-python = ">=3.9"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "regex==2025.10.23",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "tiktoken==0.12.0",
    "urllib3==2.5.0",
    "wheel==0.45.1",
    "openai",
    "python-dotenv",
    "google-generativeai",
]

[tool.hatch.build.targets.wheel]
packages = []

